--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -5,6 +5,8 @@
   height: 361px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 
 @media screen and (max-width: 580px) {
