--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url('../blocks/card/card.css');
 @import url('../blocks/card/__description/card__description.css');
 @import url('../blocks/card/__image/card__image.css');
+@import url('../blocks/card/__delete/card__delete.css');
 @import url('../blocks/card/__title/card__title.css');
 @import url('../blocks/card/__like/card__like.css');
 @import url('../blocks/card/__like/_pressed/card__like_pressed.css');
