--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   justify-content: center;
   align-items: center;
+  transition: all 0.5s ease;
 }
