--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,6 @@
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__save/popup__save.css');
+@import url('../blocks/popup/__image-container/popup__image-container.css');
+@import url('../blocks/popup/__image-fullsize/popup__image-fullsize.css');
+@import url('../blocks/popup/__image-title/popup__image-title.css');
